--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tips & Trik Kendaraan - Tabel</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     body { background: #f8f9fa; font-family: 'Poppins', sans-serif; }
     .table thead th { background: #326ada; color: #fff; }
@@ -34,52 +34,52 @@
             <span class="badge bg-light text-primary fs-6 px-3 py-2 shadow-sm">Tips Hemat BBM</span>
             <span class="badge bg-light text-primary fs-6 px-3 py-2 shadow-sm">Perawatan Rem</span>
             <span class="badge bg-light text-primary fs-6 px-3 py-2 shadow-sm">Masalah Transmisi</span>
-          </div>
+                            </div>
           <div class="search-bar-wrapper mb-4">
             <input type="text" class="form-control form-control-lg shadow-sm" id="searchInput" placeholder="Cari masalah, tips, atau solusi motor..." style="max-width: 480px; margin: 0 auto;">
-          </div>
+                            </div>
           <a href="#tipsGrid" class="btn btn-warning btn-lg px-4 fw-bold" id="scrollToTipsBtn"><i class="fas fa-motorcycle me-2"></i>Jelajahi Tips</a>
         </div>
         <div class="col-lg-5 d-none d-lg-block" data-aos="fade-left">
           <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=600&q=80" alt="Ilustrasi Motor" class="img-fluid rounded shadow-lg" style="max-height: 320px; object-fit: cover;">
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
     <div class="hero-overlay position-absolute top-0 start-0 w-100 h-100" style="background:rgba(0,0,0,0.25);"></div>
   </section>
 
   <!-- GRID CARD TIPS -->
   <section class="py-5 bg-light">
-    <div class="container">
+        <div class="container">
       <div class="row" id="tipsGrid">
         <!-- Card tips akan diisi oleh JavaScript -->
-      </div>
+                </div>
       <div class="text-end text-muted mt-2">
         <span id="resultsCount">0</span> tips motor ditampilkan
-      </div>
+            </div>
       <nav id="paginationNav" class="mt-4 d-flex justify-content-center"></nav>
-    </div>
-  </section>
+        </div>
+    </section>
 
   <!-- Modal Detail -->
-  <div class="modal fade" id="tipModal" tabindex="-1" aria-labelledby="tipModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="tipModalLabel">
-            <span id="modalTitle"></span>
-          </h5>
+    <div class="modal fade" id="tipModal" tabindex="-1" aria-labelledby="tipModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="tipModalLabel">
+                        <span id="modalTitle"></span>
+                    </h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Tutup"></button>
-        </div>
+                </div>
         <div class="modal-body" id="modalBody"></div>
-        <div class="modal-footer">
-          <span class="badge modal-category-badge" id="modalCategory"></span>
-          <span class="badge modal-difficulty-badge ms-2" id="modalDifficulty"></span>
+                <div class="modal-footer">
+                            <span class="badge modal-category-badge" id="modalCategory"></span>
+                            <span class="badge modal-difficulty-badge ms-2" id="modalDifficulty"></span>
           <small class="text-muted ms-auto" id="modalReadTime"></small>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
   <!-- Data tips (bisa juga diambil dari file eksternal/data.json) -->
   <script>
@@ -184,36 +184,75 @@
     }
 
     function showTipDetails(tipId) {
+      console.log('showTipDetails called with tipId:', tipId);
+      console.log('tipsData:', tipsData);
       const tip = tipsData.tips.find(t => t.id == tipId);
-      if (!tip) return;
+      if (!tip) {
+        alert('Data detail tidak ditemukan!');
+        return;
+      }
       document.getElementById('modalTitle').textContent = tip.title;
       let html = '';
+      // Gambar utama
+      html += `<div class='text-center mb-3'>`;
       if (tip.image) {
-        html += `<img src="${tip.image}" class="img-fluid rounded mb-3" alt="${tip.title}">`;
+        html += `<img src="${tip.image}" class="img-fluid rounded shadow-lg" style="max-height:220px;object-fit:cover;">`;
+      } else {
+        html += `<div class='d-flex align-items-center justify-content-center bg-body-tertiary rounded' style='height:120px;'><i class='fas fa-motorcycle fa-3x text-secondary'></i></div>`;
       }
-      html += `<p>${tip.description || ''}</p>`;
-      if (tip.solusi && tip.solusi.length) {
-        html += `<h6 class='mt-3'>Langkah-langkah / Solusi:</h6><ol>${tip.solusi.map(s=>`<li>${s}</li>`).join('')}</ol>`;
-      } else if (tip.steps && tip.steps.length) {
-        html += `<h6 class='mt-3'>Langkah-langkah:</h6><ol>${tip.steps.map(s=>`<li>${s}</li>`).join('')}</ol>`;
+      html += `</div>`;
+      // Header judul & badge
+      html += `<h3 class='fw-bold mb-1 text-center'>${tip.title}</h3>`;
+      html += `<div class='mb-2 text-center'>`;
+      html += `<span class='badge bg-primary me-1'>${tip.category || (tip.vehicle_type && tip.vehicle_type.charAt(0).toUpperCase() + tip.vehicle_type.slice(1)) || ''}</span>`;
+      html += `<span class='badge ${tip.difficulty === 'Mudah' ? 'bg-success' : tip.difficulty === 'Sedang' ? 'bg-warning' : 'bg-danger'} me-1'>${tip.difficulty || ''}</span>`;
+      html += `<span class='badge bg-secondary'><i class='fas fa-clock me-1'></i>${tip.readTime || ''}</span>`;
+      html += `</div>`;
+      html += `<hr>`;
+      // Deskripsi
+      html += `<p class='lead'>${tip.description || ''}</p>`;
+      // Solusi, batas_aman, penanggulangan (box lembut)
+      if (tip.solusi || tip.batas_aman || tip.penanggulangan) {
+        html += `<div class='bg-body-tertiary rounded p-3 mb-3'>`;
+        html += `<h6 class='mb-2'><i class='fas fa-tools text-success me-2'></i>Solusi & Penanganan</h6>`;
+        if (tip.solusi) {
+          html += renderFlexibleField('Solusi', tip.solusi);
+        }
+        if (tip.batas_aman) {
+          html += renderFlexibleField('Batas Aman', tip.batas_aman);
+        }
+        if (tip.penanggulangan) {
+          html += renderFlexibleField('Penanggulangan', tip.penanggulangan);
+        }
+        html += `</div>`;
       }
+      // Penyebab
+      if (tip.causes && tip.causes.length) {
+        html += `<div class='mb-3'><h6><i class='fas fa-exclamation-triangle text-danger me-2'></i>Penyebab Umum</h6><ul class='mb-0'>`;
+        tip.causes.forEach(cause => {
+          html += `<li>${cause}</li>`;
+        });
+        html += `</ul></div>`;
+      }
+      // Langkah-langkah
+      if (tip.steps && tip.steps.length) {
+        html += `<div class='mb-3'><h6><i class='fas fa-list-ol me-2'></i>Langkah-langkah</h6><ol class='mb-0'>`;
+        tip.steps.forEach(step => {
+          html += `<li>${step}</li>`;
+        });
+        html += `</ol></div>`;
+      }
+      // Tips tambahan
       if (tip.tips && tip.tips.length) {
-        html += `<h6 class='mt-3'>Tips Tambahan:</h6><ul>${tip.tips.map(s=>`<li>${s}</li>`).join('')}</ul>`;
+        html += `<div class='mb-3'><h6><i class='fas fa-lightbulb text-warning me-2'></i>Tips Tambahan</h6><ul class='mb-0'>`;
+        tip.tips.forEach(t => {
+          html += `<li>${t}</li>`;
+        });
+        html += `</ul></div>`;
       }
-      if (tip.batas_aman) {
-        html += `<h6 class='mt-3'>Batas Aman:</h6><ul>`;
-        for (const [k,v] of Object.entries(tip.batas_aman)) {
-          html += `<li><strong>${k.replace(/_/g,' ').replace(/\b\w/g, l => l.toUpperCase())}:</strong> ${v}</li>`;
-        }
-        html += `</ul>`;
-      }
-      if (tip.penanggulangan) {
-        if (tip.penanggulangan.pencegahan && tip.penanggulangan.pencegahan.length) {
-          html += `<h6 class='mt-3'>Pencegahan:</h6><ul>${tip.penanggulangan.pencegahan.map(s=>`<li>${s}</li>`).join('')}</ul>`;
-        }
-        if (tip.penanggulangan.darurat && tip.penanggulangan.darurat.length) {
-          html += `<h6 class='mt-3'>Tindakan Darurat:</h6><ul>${tip.penanggulangan.darurat.map(s=>`<li>${s}</li>`).join('')}</ul>`;
-        }
+      // Sumber
+      if (tip.source) {
+        html += `<hr><div class='text-muted small fst-italic'><i class='fas fa-link me-1'></i>Sumber: ${tip.source}</div>`;
       }
       document.getElementById('modalBody').innerHTML = html;
       document.getElementById('modalCategory').textContent = tip.category || (tip.vehicle_type && tip.vehicle_type.charAt(0).toUpperCase() + tip.vehicle_type.slice(1)) || '';
@@ -223,15 +262,48 @@
         tip.difficulty === 'Sedang' ? 'bg-warning' : 'bg-danger'
       }`;
       document.getElementById('modalReadTime').textContent = tip.readTime || '';
-      new bootstrap.Modal(document.getElementById('tipModal')).show();
+      try {
+        new bootstrap.Modal(document.getElementById('tipModal')).show();
+      } catch (err) {
+        console.error('Gagal menampilkan modal:', err);
+        alert('Gagal menampilkan detail. Pastikan Bootstrap JS sudah termuat.');
+      }
     }
 
+    // Fungsi bantu untuk render field fleksibel (objek, array, string)
+    function renderFlexibleField(title, value) {
+      let html = '';
+      if (typeof value === 'string') {
+        html += `<div class='mb-2'><strong>${title}:</strong> ${value}</div>`;
+      } else if (Array.isArray(value)) {
+        html += `<div class='mb-2'><strong>${title}:</strong><ul>`;
+        value.forEach(item => { html += `<li>${item}</li>`; });
+        html += `</ul></div>`;
+      } else if (typeof value === 'object' && value !== null) {
+        html += `<div class='mb-2'><strong>${title}:</strong>`;
+        Object.entries(value).forEach(([key, val]) => {
+          // Jika val array, tampilkan sebagai sub-list
+          if (Array.isArray(val)) {
+            html += `<div class='ms-2'><em>${key.replace(/_/g, ' ').replace(/\b\w/g, l => l.toUpperCase())}:</em><ul>`;
+            val.forEach(item => { html += `<li>${item}</li>`; });
+            html += `</ul></div>`;
+          } else {
+            html += `<div class='ms-2'><em>${key.replace(/_/g, ' ').replace(/\b\w/g, l => l.toUpperCase())}:</em> ${val}</div>`;
+          }
+        });
+        html += `</div>`;
+      }
+      return html;
+    }
+
+    // Pastikan event listener tombol detail tetap terpasang setelah render ulang
     document.addEventListener('DOMContentLoaded', async function() {
       await loadTipsData();
       renderTipsGrid();
       document.getElementById('tipsGrid').addEventListener('click', function(e) {
-        if (e.target.closest('.btn-detail')) {
-          const id = e.target.closest('.btn-detail').dataset.id;
+        const btn = e.target.closest('.btn-detail');
+        if (btn) {
+          const id = btn.dataset.id;
           showTipDetails(id);
         }
       });
@@ -239,8 +311,6 @@
         currentPage = 1;
         renderTipsGrid(this.value);
       });
-
-      // Scroll to tips grid when button is clicked
       document.getElementById('scrollToTipsBtn').addEventListener('click', function(e) {
         e.preventDefault();
         const tipsGrid = document.getElementById('tipsGrid');
@@ -248,5 +318,23 @@
       });
     });
   </script>
+  <!-- Bootstrap JS (wajib untuk modal) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Footer -->
+  <footer class="footer mt-auto py-4 bg-body-tertiary border-top">
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center gap-3">
+      <div class="footer-desc text-center text-md-start">
+        <strong>Solusi Motor</strong> — Platform inspirasi & solusi perawatan motor harian. Temukan tips, trik, dan solusi masalah motor dengan mudah!
+                </div>
+      <div class="footer-social text-center text-md-end">
+        <a href="https://instagram.com/your_ig" target="_blank" class="text-body mx-2" title="Instagram" rel="noopener">
+          <i class="fab fa-instagram fa-lg"></i>
+        </a>
+        <a href="https://youtube.com/your_youtube" target="_blank" class="text-body mx-2" title="YouTube" rel="noopener">
+          <i class="fab fa-youtube fa-lg"></i>
+        </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
